--- a/django/templates/base.haml
+++ b/django/templates/base.haml
@@ -42,7 +42,7 @@
       %div.row
           %div.twelve.columns
             %h2
-              %a{"style": "color: black", "href": "{% url 'home' %}"}
+              %a{"style": "color: black", "href": "{% url home %}"}
                 Hello world
               %hr
 
